--- a/piget/piget.csproj
+++ b/piget/piget.csproj
@@ -218,6 +218,7 @@
     <Compile Include="KeyMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Updater.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
