--- a/piget/packages.config
+++ b/piget/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="Fody" version="6.5.5" targetFramework="net48" developmentDependency="true" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
@@ -15,6 +16,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
@@ -57,4 +59,5 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
+  <package id="TrueColorConsole" version="1.0.2" targetFramework="net48" />
 </packages>
