--- a/piget/packages.config
+++ b/piget/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="Fody" version="6.5.5" targetFramework="net48" developmentDependency="true" />
+  <package id="Goblinfactory.Konsole" version="6.2.2" targetFramework="net48" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
