--- a/piget/packages.config
+++ b/piget/packages.config
@@ -1,21 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Fody" version="6.5.5" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.8.1" targetFramework="net48" developmentDependency="true" />
   <package id="Goblinfactory.Konsole" version="6.2.2" targetFramework="net48" />
-  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net48" />
+  <package id="JetBrains.Annotations" version="2024.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
-  <package id="Octokit" version="10.0.0" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
+  <package id="Octokit" version="13.0.1" targetFramework="net48" />
+  <package id="OpenTelemetry" version="1.9.0" targetFramework="net48" />
+  <package id="OpenTelemetry.Api" version="1.9.0" targetFramework="net48" />
+  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.9.0" targetFramework="net48" />
+  <package id="SharpZipLib.NETStandard" version="1.0.7" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
-  <package id="System.Console" version="4.3.0" targetFramework="net48" />
+  <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net48" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
@@ -29,8 +45,8 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net48" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net48" />
@@ -38,28 +54,30 @@
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="8.0.2" targetFramework="net48" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.4" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net48" />
   <package id="TrueColorConsole" version="1.0.2" targetFramework="net48" />
+  <package id="ZstdSharp.Port" version="0.8.1" targetFramework="net48" />
 </packages>
